Definiendo estructura y estilos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,18 +3,123 @@ body{
 	margin:0;
 	padding:0;
 }
+/*font-family: 'Raleway', sans-serif;
+font-family: 'Open Sans', sans-serif;*/
+nav{
+	font-family: 'Open Sans', sans-serif;
+}
 button.btn-hamburguer{
 	float: left;
 	margin-left: 15px;
 	border:none;
-
 }
 button.btn-hamburguer:hover {
     background-color: none; 
  }
- .contentLogo{
+.contentLogo{
  	padding-left: 11rem;
     display: flex;
     justify-content: center;
     align-items: center;
  }
+ header{
+ 	font-family: 'Raleway', sans-serif;
+ 	width: 100%;
+ }
+.contentTaxi{
+    background-image: url(../img/taxi.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    background-attachment: fixed;
+}
+.hMobile{
+	height: 100rem;
+}
+.description-Desktop{
+	display: none;
+}
+.description-mobile{
+    color: white;
+    padding: 5rem;
+    background-color: #F7B617;
+    position: absolute;
+    top: 42rem;
+    right: 0;
+    /* width: 60rem; */
+    font-size: 6rem;
+    line-height: 5rem;
+}
+.description-mobile p{
+	margin:0;
+}
+.description-mobile button{
+    margin-top: 4rem;
+    font-weight: bold;
+    font-size: 3rem;
+    border-radius: 1rem;
+}
+
+
+@media (min-width: 768px) {
+	.hDesktop{
+    	height: 55rem;
+	}
+	.description-mobile{
+		display: none;
+	}
+	.description-Desktop{
+		display: block;
+		color: white;
+		padding: 5rem;
+		background-color: #F7B617;
+		position: absolute;
+		top: 27rem;
+		right: 0;		    
+    	font-size: 2rem;
+	}
+	.description-Desktop h2{
+		margin:0;
+	}
+	.description-Desktop div.primerP{
+		margin-bottom: 3rem;
+	}
+	.description-Desktop button{
+    	margin-top: 4rem;
+    	font-weight: 700;
+    	font-size: 3rem;
+    	border-radius: 1rem;
+	}
+	.description-Desktop div.tercerP{
+		position: relative;
+		padding: 0.5rem;
+	}
+	 hr:before {
+		content: "O bien";
+    	background-color: #F7B617;
+    	position: absolute;
+    	top: 1rem;
+    	left: 13rem;
+    	padding: 0 6rem;
+  	}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+     
