--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,6 +83,16 @@ div.content-celular h2{
 div.textApp{
 	display: none;
 }
+div.border-0{
+	border:none;
+}
+div.border-0 .containerFlex{
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
+}
 @media (min-width: 768px) {
 	.hDesktop{
     	height: 55rem;
@@ -144,6 +154,9 @@ div.textApp{
 	}
 	div.textApp p{
 		font-size: 2rem;
+	}
+	div.border-0{
+		display: none;
 	}
 
 }
